# serde-hex

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: config.rs  lib.rs  types.rs  utils.rs
src/macros/: .hex.rs.swp  hex.rs  hex.rs.old  local.rs  misc.rs  mod.rs
tests/: extensions.rs  json.rs
